...
            />

    </LinearLayout>


        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="@id/linelayout1"
            app:layout_constraintStart_toEndOf="@id/linelayout1"
            app:layout_constraintEnd_toStartOf="@id/linelayout2">
...
                android:id="@+id/btn1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/control_btn1"/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/control_btn2"/>
        </LinearLayout>
        <LinearLayout
...
