...
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_shape">
    <ProgressBar
        android:id="@+id/progress2"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"

        android:layout_width="200dp"
        android:layout_height="35dp"
        android:max="100"
        android:progress="20"
        android:progressDrawable="@drawable/jintutiao"
...
